docs/refs/script-api/server/0.1.0/entitybreathablecomponent.md
# `EntityBreathableComponent`

> 文档版本：1.21.0.24

`EntityBreathableComponent`类，扩展自[`IEntityComponent`](./ientitycomponent.md)。script_api.mojang-minecraft.entitybreathablecomponent.description

## 属性

/// define
`breatheBlocks`


///

```js
read-only breatheBlocks: BlockPermutation[];
```

/// html | div.result
//// define
`breatheBlocks`：<code><a href="../blockpermutation/">BlockPermutation</a>[]</code>

- script_api.mojang-minecraft.entitybreathablecomponent.breatheblocks.description


////

///


/// define
`breathesAir`


///

```js
read-only breathesAir: boolean;
```

/// html | div.result
//// define
`breathesAir`：`boolean`

- script_api.mojang-minecraft.entitybreathablecomponent.breathesair.description


////

///


/// define
`breathesLava`


///

```js
read-only breathesLava: boolean;
```

/// html | div.result
//// define
`breathesLava`：`boolean`

- script_api.mojang-minecraft.entitybreathablecomponent.breatheslava.description


////

///


/// define
`breathesSolids`


///

```js
read-only breathesSolids: boolean;
```

/// html | div.result
//// define
`breathesSolids`：`boolean`

- script_api.mojang-minecraft.entitybreathablecomponent.breathessolids.description


////

///


/// define
`breathesWater`


///

```js
read-only breathesWater: boolean;
```

/// html | div.result
//// define
`breathesWater`：`boolean`

- script_api.mojang-minecraft.entitybreathablecomponent.breatheswater.description


////

///


/// define
`generatesBubbles`


///

```js
read-only generatesBubbles: boolean;
```

/// html | div.result
//// define
`generatesBubbles`：`boolean`

- script_api.mojang-minecraft.entitybreathablecomponent.generatesbubbles.description


////

///


/// define
`inhaleTime`


///

```js
read-only inhaleTime: float;
```

/// html | div.result
//// define
`inhaleTime`：`float`

- script_api.mojang-minecraft.entitybreathablecomponent.inhaletime.description


////

///


/// define
`nonBreatheBlocks`


///

```js
read-only nonBreatheBlocks: BlockPermutation[];
```

/// html | div.result
//// define
`nonBreatheBlocks`：<code><a href="../blockpermutation/">BlockPermutation</a>[]</code>

- script_api.mojang-minecraft.entitybreathablecomponent.nonbreatheblocks.description


////

///


/// define
`suffocateTime`


///

```js
read-only suffocateTime: int32;
```

/// html | div.result
//// define
`suffocateTime`：`int32`

- script_api.mojang-minecraft.entitybreathablecomponent.suffocatetime.description


////

///


/// define
`totalSupply`


///

```js
read-only totalSupply: int32;
```

/// html | div.result
//// define
`totalSupply`：`int32`

- script_api.mojang-minecraft.entitybreathablecomponent.totalsupply.description


////

///


## 方法

/// define
`setAirSupply`


///

script_api.mojang-minecraft.entitybreathablecomponent.setairsupply.description

```js
setAirSupply(value: int16): void
```

/// html | div.result
//// define
`value`：`int16`∈[`-32768`, `32767`]

- script_api.mojang-minecraft.entitybreathablecomponent.setairsupply.value.description


////

//// define
返回值：`void`

- script_api.mojang-minecraft.entitybreathablecomponent.setairsupply.return


////

///

